discussion/kv_engine/130749/130749_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39991: Synchronize access to trace vector

The trace vector may be operated from multiple threads
(and reallocated). Make sure that we serialize this
access (and don't reallocate without letting other
threads know that the location isn't valid anymore)

Change-Id: I0addc4e4e75c3ff7ef87024f0cc8a5ccfd64ef01

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-18 05:10:31.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-18 05:17:23.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24655/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28627/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12070/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4189/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4328/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4328/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3299/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3299/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2831/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie_trace_context.h:37:28: error: no type named "const_byte_buffer" in namespace "cb" [clang-diagnostic-error]
                       cb::const_byte_buffer rawKey,
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2831/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie_trace_context.h:37:28:
error: no type named "const_byte_buffer" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2831/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4245/ : FAILURE

Failure of GoogleTest "MagmaKVStoreTest.setMaxDataSize":

<pre>
[ RUN      ] MagmaKVStoreTest.setMaxDataSize
[2020-06-18T05:14:01.514Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:2781: Failure
[2020-06-18T05:14:01.514Z] Expected: (writeCacheQuotaAfter) < (writeCacheQuota), actual: 0 vs 0
[2020-06-18T05:14:01.514Z] [  FAILED  ] MagmaKVStoreTest.setMaxDataSize (28 ms)
MagmaKVStoreTest.setMaxDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4245/ )

Failure of a CTest test [2020-06-18T05:14:01.514Z]   1/410 Test  #94: ep-engine_ep_unit_tests.MagmaKVStoreTest .......................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4245/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1335/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
